<resources>
    <string name="app_name">Yammy Nyammy</string>
    <string name="home">Дом</string>
    <string name="cart">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Регистрация</string>
    <string name="login_via_google">Войти с помощью Google</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="repeat_password">Подтверждение пароля</string>
    <string name="register_verb">Зарегистрироваться</string>
    <string name="hello">Здравствуйте</string>
    <string name="we_need_your_phone_number_for_register">Нам понадобится ваш номер телефона для авторизации.</string>
    <string name="fill_password">Заполните Пароль</string>
    <string name="fill_email">Заполните Email</string>
    <string name="error">Ошибка</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="fill_name">Заполните имя</string>
    <string name="we_need_your_phone_number_and_name_for_register">Нам понадобится ваше имя и номер телефона для авторизации.</string>
    <string name="fill_phone">Заполните номер телефона</string>
    <string name="ice_cream">Мороженное</string>
    <string name="cupcakes">Кексы</string>
    <string name="cookies">Печенье</string>
    <string name="chocolate">Шоколад</string>
    <string name="net_error">Произошла ошибка</string>
    <string name="menu">Меню</string>
    <string name="orders">Заказы</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="select_count">Выберите количество</string>
    <string name="added_to_cart">Добавлено в корзину!</string>
    <string name="make_order">Оформить заказ</string>
    <string name="no_products">Нет товаров</string>
    <string name="no_products_in_cart">Не добавлено ни одного товара</string>
    <string name="go_back_to_menu">Вернуться в меню</string>
    <string name="delivery">Доставка:</string>
    <string name="total">Итого:</string>
    <string name="accept_order">Подтвердить заказ</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="making_order">Оформление заказа</string>
    <string name="no_addresses">Нет адресов</string>
    <string name="no_added_addresses">Вы не добавили ни одного адреса</string>
    <string name="new_address">Новый адрес</string>
    <string name="my_addresses">Мои адреса</string>
    <string name="street">Улица</string>
    <string name="house_num">Дом</string>
    <string name="apartment">Квартира</string>
    <string name="add">Добавить</string>
    <string name="update">Обновить</string>
    <string name="edit_address">Редактировать адрес</string>
    <string name="fill_street">Введите название улицы</string>
    <string name="fill_house_num">Введите номер дома</string>
    <string name="fill_apart_num">Введите номер квартиры</string>
    <string name="delete_address">Удалить адрес</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="address_deleted">Адрес удален</string>
    <string name="address_added">Адрес добавлен</string>
    <string name="address_updated">Данные об адресе обновлены</string>
    <string name="fill_address">Выберите адрес</string>
    <string name="order_number">Заказ №</string>
    <string name="total_sum">"Сумма: "</string>
    <string name="date">"Дата: "</string>
    <string name="status">"Статус: "</string>
    <string name="order_were_made_successfully">Заказ успешно осуществлен!</string>
    <string name="order_date">"Заказ от: "</string>
    <string name="you_did_no_orders">Вы не сделали ни одного заказа</string>
    <string name="no_orders">Нет заказов</string>
    <string name="product_image">Фото товара</string>
    <string name="go">Перейти</string>
    <string name="address">"Адрес: "</string>
    <string name="order_from">"Заказ от "</string>
    <string name="change_password">Изменить пароль</string>
    <string name="sign_out">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="data_updated">Данные обновлены</string>
    <string name="editing">Редактирование</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_repeat">Новый пароль (повторить)</string>
    <string name="password_updated">Пароль успешно обновлен</string>
    <string name="passwords_does_not_match">Пароли не совпадают</string>
    <string name="passwords_are_to_short">Пароли слишком короткие</string>
    <string name="update_password">Изменить пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="address_will_be_deleted">Адрес будет удален.</string>

</resources>
