<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/menu_fragment">

    <fragment
        android:id="@+id/menu_fragment"
        android:name="com.phooper.yammynyammy.ui.fragments.MenuFragment"
        android:label="@string/menu">
        <action
            android:id="@+id/action_menu_fragment_to_product_fragment"
            app:destination="@id/product_fragment" />
    </fragment>
    <fragment
        android:id="@+id/orders_fragment"
        android:name="com.phooper.yammynyammy.ui.fragments.OrdersFragment"
        android:label="@string/orders" />
    <fragment
        android:id="@+id/cart_fragment"
        android:name="com.phooper.yammynyammy.ui.fragments.CartFragment"
        android:label="@string/cart" />
    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.phooper.yammynyammy.ui.fragments.ProfileFragment"
        android:label="@string/profile" />
    <fragment
        android:id="@+id/product_fragment"
        android:name="com.phooper.yammynyammy.ui.fragments.ProductFragment"
        android:label=" ">
        <argument
            android:name="productId"
            app:argType="integer" />
    </fragment>
</navigation>