<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/main_constraint_layout"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_progress_bar_cover"
        android:gravity="center"
        android:translationZ="90dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clipToPadding="false"
            android:padding="32dp">

            <ImageView
                android:id="@+id/logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="158dp"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/color_surface"
                android:text="@string/login"
                android:textColor="@color/color_on_surface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="158dp"
                android:layout_height="64dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/login_btn" />

            <View
                android:id="@+id/dotted_background_view"
                android:layout_width="268dp"
                android:layout_height="64dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/dotted_white_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_via_google"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="0dp"
                android:backgroundTint="@color/color_primary"
                android:drawableLeft="@drawable/ic_google"
                android:outlineProvider="none"
                android:text="@string/login_via_google"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="@id/dotted_background_view"
                app:layout_constraintEnd_toEndOf="@id/dotted_background_view"
                app:layout_constraintStart_toStartOf="@id/dotted_background_view"
                app:layout_constraintTop_toTopOf="@id/dotted_background_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>